# jimbomesh-holler-server

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NAMING.md  QUICK_START.md  README.md  SECURITY.md  SESSION_SUMMARY.md  TODO.md  UNINSTALL-OLLAMA.md  admin-routes.js  api-gateway.js  db.js  docker-compose.gpu.yml  docker-compose.mac.yml  docker-compose.yml  docker-entrypoint.sh  document-pipeline.js  eslint.config.js  jwt-validator.js  mesh-connector.js  mesh-utils.js  mesh-webrtc.js  openapi.yaml  package-lock.json  package.json  playwright.config.js  qdrant-client.js  setup.ps1  setup.sh  (+4 more)
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
admin/: app.js  i18n.js  index.html  style.css
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  nsis-hooks.nsi  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/html/: loading.html
desktop/src-tauri/icons/: README.md  icon.icns
desktop/src-tauri/nsis/: installer-hooks.nsh
desktop/src-tauri/src/: config.rs  main.rs  process.rs  setup.rs
docs/: API_USAGE.md  ARCHITECTURE.md  ARM_SUPPORT.md  CONFIGURATION.md  CURSOR_VS_CODE.md  CUSTOMIZATION.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKERBUILD.md  IDE_INTEGRATIONS.md  INTEGRATION.md  MAC_WINDOWS_SETUP.md  MODEL_BENCHMARKS.md  OPENCLAW_INTEGRATION.md  SECURITY.md  TROUBLESHOOTING.md  USER_GUIDE.md
scripts/: benchmark-models.sh  check-moonshine-persistence.sh  embed.sh  (+10 more)
(+41 files in other folders)
