[package]
name = "jimbomesh-holler"
version = "0.3.43"
description = "JimboMesh Holler — one-click local AI inference"
authors = ["Ingress Technology"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time", "sync", "rt"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rand = "0.8"
hex = "0.4"
which = "6"
dirs = "5"
open = "5"
flate2 = "1"
tar = "0.4"
tauri-plugin-notification = "2.3.3"
rusqlite = { version = "0.34", features = ["bundled"] }
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
